<resources>
    <string name="app_name">saunaProjekti</string>
    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="paivamaara">Paivamaara</string>
    <string name="aika">Aika</string>
    <string name="l_mp_tila">Lämpötila</string>
    <string name="onko">Onko</string>
    <string name="count">Nothing is selected</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Graph</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="table">Table</string>
    <string name="exit">Exit</string>
    <string name="about_toast">About is clicked</string>
    <string name="add">Add</string>
    <string name="mainmenu">Mainmenu</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="aboutString">Tämä sovellus on koulussa tehty projekti, jonka tarkoitus on näyttää Joonaksen saunan lämpötila.\n\nUusia lämpötila-arvoja voi nähdä myös nettisivuillamme https:\\kello9sauna.fi.\n\nLämpötilan mittausajoista kerrotaan nettisivuillamme kun saunan lämmittäminen on suunnitelmissa.</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>