<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/table" android:icon="@drawable/ic_action_table" app:showAsAction="always"   android:title="@string/table"/>
    <item
        android:id="@+id/reset" android:icon="@drawable/ic_action_graph" app:showAsAction="always|withText" android:title="@string/reset"/>
    <item
        android:id="@+id/about" android:icon="@android:drawable/ic_dialog_info" app:showAsAction="never" android:title="@string/about">
    </item>
    <item
        android:id="@+id/logout" android:icon="@android:drawable/ic_dialog_info" app:showAsAction="never" android:title="@string/logout">

    </item>
    <item
        android:id="@+id/exit"  app:showAsAction="never" android:title="@string/exit">
    </item>
</menu>